# profill

./: .gitignore  README.md  package.json  pyproject.toml
client/: index.html  package.json
client/src/: App.tsx
client/src/common/: style.ts  types.ts
client/src/component/: config.ts
client/src/component/CommentsBox/: CommentsBox.tsx  styled.ts
client/src/component/Header/: Header.tsx  styled.ts
client/src/component/MemberBox/: MemberBox.tsx  styled.ts
client/src/component/MyBox.tsx/: MyBox.tsx  styled.ts
client/src/component/UI/: Button.ts  ImageBox.ts
client/src/pages/Login/: Login.tsx  styled.ts
client/src/pages/Main/: Main.tsx  styled.ts
client/src/pages/View/: View.tsx  styled.ts
client/src/utils/: auth.ts  axios.ts  device.ts
server/: DockerFile  main.py  pyproject.toml
server/api/: auth.py  users.py
server/app/: main.py
server/app/api/: __init__.py  auth.py  comments.py  images.py  users.py
server/app/core/: auth.py  config.py  database.py  deps.py  security.py
server/app/models/: __init__.py  comment.py  image.py  user.py
server/app/modules/: memvers.py  s3.py
server/app/queries/: exec.py
server/app/schemas/: __init__.py  comments.py  memvers.py  users.py
server/core/: auth.py  database.py  deps.py
server/models/: user.py
